; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_mci_device.c_AT91F_CfgDevice.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/at91/image/dfboot/src/extr_mci_device.c_AT91F_CfgDevice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64, i64, i64, i64, i64, i32, i64 }
%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_4__*, %struct.TYPE_5__* }

@MCI_Device_Features = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@AT91C_CARD_REMOVED = common dso_local global i32 0, align 4
@AT91C_MCI_IDLE = common dso_local global i32 0, align 4
@MCI_Device_Desc = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@AT91C_MCI_SCDBUS = common dso_local global i32 0, align 4
@MCI_Device = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AT91F_CfgDevice() #0 {
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 8), align 8
  %1 = load i32, i32* @AT91C_CARD_REMOVED, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 7), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 6), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 5), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 4), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 2), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 1), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @MCI_Device_Features, i32 0, i32 0), align 8
  %2 = load i32, i32* @AT91C_MCI_IDLE, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @MCI_Device_Desc, i32 0, i32 1), align 4
  %3 = load i32, i32* @AT91C_MCI_SCDBUS, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @MCI_Device_Desc, i32 0, i32 0), align 4
  store %struct.TYPE_5__* @MCI_Device_Desc, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @MCI_Device, i32 0, i32 1), align 8
  store %struct.TYPE_4__* @MCI_Device_Features, %struct.TYPE_4__** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @MCI_Device, i32 0, i32 0), align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
